--- a/index.Rhtml
+++ b/index.Rhtml
@@ -20,6 +20,9 @@ body, td {
 
   <p>This is the course project for <a href="https://class.coursera.org/predmachlearn-006">Coursera Practical Machine Learning</a>.
   </p>
+  <p><h3>Objective</h3>
+  The baseline performance index for this HAR dataset is 99% accuracy (see References). However for the purpose of this assignment we will target an out of sample accuracy of 95% on the testing set.
+  </p>
   <p><h3>Initialization</h3>
   Here we initialize random number generator with a seed and load training data. Note that the training data contains #DIV/0! which needs to be parsed as NA.</p>
 
@@ -31,9 +34,9 @@ body, td {
     end.rcode-->
 
   <p>
-  <h3>Data Cleanup</h3>
-  We decided to use all the predictors for the prediction as using PCA did not result in any improvement. Here we select all predictors that do not contain NAs and are not text/date columns (like user_name/raw_timestamp_part_1 etc)
-  We also tried removing zero vars but there weren't any!!.
+  <h3>Features and Training Parameters</h3>
+  We decided to use all the predictors for training as using PCA did not result in any improvement. Here we select all predictors that do not contain NAs and are not text/date columns (like user_name/raw_timestamp_part_1 etc). There was no need for removing zero vars because there weren't any in the leftover variables.<br/>
+  We also initialize training control parameters with 5-fold repeated cross validation for all classifiers.
   </p>
 <!--begin.rcode cleanup, message=FALSE
     predictors <- colnames(wle_data)
@@ -42,11 +45,15 @@ body, td {
     # nsv <- nearZeroVar(wle_data[, predictors])
     # predictors <- predictors[-nsv]
     classes <- unique(wle_data$classe)
+    fitControl <- trainControl(method="repeatedcv",
+                           number=5,
+                           repeats=1,
+                           verboseIter=FALSE)
     end.rcode-->
 
   <p>
   <h3>Data Partitioning</h3>
-  Here we split the data into into training(49%), testing(21%) and validation(30%) datasets. The validation dataset was used for ensemble classifier in the end.
+  Here we split the data into into training(49%), testing(21%) and validation(30%) datasets. The validation dataset was used for ensemble classifier in the end.<br/>
   Finally we removed unused variables and called gc() to reclaim memory for later analysis.
   </p>
 <!--begin.rcode splitting, message=FALSE
@@ -69,7 +76,7 @@ body, td {
   Unfortunately the accuracy of the tree was not very good (56%) on the testing set. We tried different configurations but it did not help much. Here are the tree and results.
   </p>
 <!--begin.rcode tree, message=FALSE, fig.align='center', results='asis'
-    modeltree <- train(classe ~., data=training, method="rpart", trControl=trainControl(method='cv', number=10))
+    modeltree <- train(classe ~., data=training, method="rpart", trControl=fitControl)
     library(rattle)
     fancyRpartPlot(modeltree$finalModel)
     predicttree <- predict(modeltree, newdata=testing)
@@ -80,10 +87,10 @@ body, td {
 
   <p>
   <h3>Second Attempt: Linear Discriminant Analysis</h3>
-  The second classifier we tried was an LDA classifier which was also taught in the course. We chose the default parameters with a 10 fold cross validation. The accuracy was vastly improved to 71% but it was still not very good. Here are the results.
+  The second classifier we tried was an LDA classifier which was also taught in the course. We chose the default parameters with a 5 fold cross validation. The accuracy was vastly improved to 71% but it was still not very good. Here are the results.
   </p>
 <!--begin.rcode lda, message=FALSE, fig.align='center', results='asis'
-    modellda <- train(classe ~., data=training, method="lda", trControl=trainControl(method='cv', number=10))
+    modellda <- train(classe ~., data=training, method="lda", trControl=fitControl)
     predictlda <- predict(modellda, newdata=testing)
     cmlda <- confusionMatrix(predictlda, testing$classe)
     plot(cmlda$table, col = 1 + as.integer(classes), main = paste("LDA Confusion Matrix: Accuracy=", round(cmlda$overall['Accuracy'], 2)))
@@ -95,10 +102,6 @@ body, td {
   Finally we stumbled upon the GBM classifier. We ran it with repeated cross validation and its accuracy was much better (96%) on the training set even though it took much longer to execute.
   </p>
 <!--begin.rcode gbm, message=FALSE, fig.align='center', results='asis'
-    fitControl <- trainControl(method="repeatedcv",
-                           number=5,
-                           repeats=1,
-                           verboseIter=FALSE)
     modelgbm <- train(classe ~., data=training, method="gbm", trControl=fitControl, verbose = FALSE)
     predictgbm <- predict(modelgbm, newdata=testing)
     cmgbm <- confusionMatrix(predictgbm, testing$classe)
